--- a/FRONTEND/vite-project/package.json
+++ b/FRONTEND/vite-project/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
