--- a/FRONTEND/vite-project/package.json
+++ b/FRONTEND/vite-project/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
